toolchain/internal/core/analysis/testdata/errors/naming/type_not_pascal.vdl
// @expect: E101

type user {
  id string
}
